# PulsimGUI

./: .gitignore  AGENTS.md  BUILD.md  CONTRIBUTING.md  README.md  _sim_test.py  mkdocs.yml  pulsimgui.spec  pyproject.toml  run.sh
.github/workflows/: build.yml  ci.yml  docs-pages.yml  release.yml
docs/: backend-adapter.md  developer-guide.md  faq.md  frontend-architecture.md  index.md  instalacao.md  tutorials.md  user-manual.md
docs/gui/: configuracao-simulacao.md  visao-geral.md
docs/tutoriais/: circuito-rc.md  conversor-buck.md
examples/: 01_voltage_divider.pulsim  02_rc_lowpass.pulsim  03_rc_transient.pulsim  04_mosfet_switch.pulsim  05_diode_rectifier.pulsim  06_rl_circuit.pulsim  07_rc_backend_smoke.pulsim  08_probe_scope_thermal_demo.pulsim  09_buck_closed_loop_loss_thermal_validation.pulsim  09_buck_closed_loop_loss_thermal_validation.pulsim.bak.bak  09_buck_closed_loop_loss_thermal_validation_expected.md  10_resistor_thermal_scope_smoke.pulsim  PulsimProjects.pulsim  README.md  boost_converter.pulsim  buck_converter.pulsim  buck_converter.pulsim.bak.bak  buck_converter.pulsim.bak.bak.bak  buck_converter.pulsim.bak.bak.bak.bak  buck_converter_closed_loop.pulsim  buck_converter_closed_loop.pulsim.bak.bak  flyback_converter.pulsim  rc_circuit.pulsim  rlc_circuit.pulsim  simple_rc.pulsim
hooks/: hook-pulsim.py  hook-qtawesome.py
openspec/: project.md
packaging/icons/: pulsimgui.icns
packaging/linux/: pulsimgui.appdata.xml  pulsimgui.desktop
packaging/macos/: dmg_settings.json
packaging/windows/: installer.nsi  version_info.txt
scripts/: benchmark_frontend_conversion.py  build.py  check_resistor_thermal_backend.py  create_example_projects.py  generate_icons.py  release_from_dev.sh  sim_buck_closed_loop.py  smoke_templates.py  test_cl_buck.py  update_backend_version.py  update_gui_version.py
src/pulsimgui/: __init__.py  __main__.py  qt_env.py
tests/: __init__.py  conftest.py  test_scope_performance.py
tests/test_commands/: test_command_stack.py
tests/test_integration/: __init__.py  example_circuits.py  test_backend_switching.py  test_error_handling.py  test_performance.py  test_simulation_workflows.py
tests/test_models/: test_circuit.py  test_component.py  test_project_simulation_settings.py  test_subcircuit.py
tests/test_scripts/: test_version_update_scripts.py
tests/test_services/: test_ac_analysis.py  test_backend_loader.py  (+16 more)
(+156 files in other folders)
