[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pulsimgui"
version = "0.1.0"
description = "Cross-platform GUI for Pulsim power electronics simulator"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Luiz Gili", email = "luizcarlosgili@gmail.com" }
]
keywords = ["power electronics", "circuit simulation", "GUI", "Qt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "PySide6>=6.5.0",
    "pyqtgraph>=0.13.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.2.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
build = [
    "pyinstaller>=6.0.0",
    "dmgbuild>=1.6.0;sys_platform=='darwin'",
]

[project.scripts]
pulsimgui = "pulsimgui.__main__:main"

[project.gui-scripts]
pulsimgui-gui = "pulsimgui.__main__:main"

[project.urls]
Homepage = "https://github.com/lgili/PulsimGui"
Repository = "https://github.com/lgili/PulsimGui"

[tool.hatch.build.targets.wheel]
packages = ["src/pulsimgui"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
qt_api = "pyside6"

[tool.coverage.run]
source = ["src/pulsimgui"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
